force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>A &quot;Contract&quot; object is a legally binding document that formalizes the terms and conditions of a real estate transaction. It encompasses crucial information such as property details, parties involved (buyer and seller), purchase price, financing terms, contingencies, and key dates. In real estate, contracts are fundamental for outlining the responsibilities and obligations of both parties and are a necessary step in property transactions. The Contract object ensures clarity and legal compliance, facilitating the buying and selling of real estate properties.</description>
    <label>Contract</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>