force-app/main/default/objects/Contract__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>