force-app/main/default/objects/Contract__c/fields/Deals__c.field-meta.xml
<CustomField>
    <fullName>Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deals</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>